add text, links and basic styling

--- a/index.html
+++ b/index.html
@@ -1,9 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Philo van Kemenade</title>
+  <title>Philo van Kemenade</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
-<body>
-    <h1>Hello World</h1>
+<body class="sans-serif dark-gray bg-washed-green">
+
+  <div class="pa3 pa4-m pa6-l pb4-l">
+    <div class="fw7 lh-title mt5">
+      <p>
+        <div class="f-headline">hi! 👋 </div>
+        <div class="f1">My name is Philo.</div>
+      </p> 
+      <p class="f2 measure">
+        Occasionally people call me a designer 🎩, technologist 🧢, educator 🎓 or community organiser ⛑. 
+      </p>
+      <p class="f3 measure">
+        I enjoy working with cultural organisations to help them tell stories in experiential ways, often making use of digitised collections.
+      </p>
+      <p class="f4 measure">
+        I have a background in Cognitive Science & Artificial Intelligence and have a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
+      </p>
+    </div>
+    <div class="measure">
+      <p>
+        I co-founded the design studio <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="http://unfold.is/">Unfold Collective</a> to explore the potential for meaning making media on the intersection of digital and physical. We help cultural organisations and brands to tell stories in experiential ways.
+      </p>
+      <p>
+        I am co-founder and head curator of <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://sensorium.is/">Sensorium Festival</a>, celebrating humane applications of creative technology in art, design and performance.
+      </p>
+      <p>
+        Since 2016, I work in the R&D team of the Slovak National Gallery on web technology to connect people to art. 
+        Projects that I'm particularly proud of include the online collections platform <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://webumenia.sk/en">Web umenia</a>, a <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="http://senxskutocnost.sng.sk/en">long-form story about a controversial part of Slovak history</a> and a <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://fillafulla.sng.sk/?lang=en#">conversational interface that brings two iconic Czechoslovak painters back to life in chat bot form</a>.
+        You can find <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://github.com/SlovakNationalGallery/">all our work on GitHub</a>
+      </p>
+      <p>
+        In 2013, I initiated an international series of <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="http://twitter.com/storyunite">storytelling hack jams</a> to bring together media makers, web developers and designers to prototype stories that can only be told on the web. We are a welcoming community of innovative storytellers, spread across many disciplines and time zones.
+      </p>
+    </div>
+    <footer class="pv4 tl">
+      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
+        <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://github.com/phivk/" title="github">
+        <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://medium.com/@phivk" title="medium">
+        <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://slides.com/phivk/" title="slides">
+        <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
+        <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://vimeo.com/phivk" title="vimeo">
+        <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
+      </a>
+    </footer>
+  </div>
+  
+  <script>
+    feather.replace()
+  </script>
 </body>
 </html>
