improve link styling

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     </div>
     <div class="measure">
       <p>
-        I co-founded the design studio <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="http://unfold.is/">Unfold Collective</a> to explore the potential for meaning making media on the intersection of digital and physical. We help cultural organisations and brands to tell stories in experiential ways.
+        I co-founded the design studio <a class="link dark-green hover-green underline fw6" target="_blank" href="http://unfold.is/">Unfold Collective</a> to explore the potential for meaning making media on the intersection of digital and physical. We help cultural organisations and brands to tell stories in experiential ways.
       </p>
       <p>
-        I am co-founder and head curator of <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://sensorium.is/">Sensorium Festival</a>, celebrating humane applications of creative technology in art, design and performance.
+        I am co-founder and head curator of <a class="link dark-green hover-green underline fw6" target="_blank" href="https://sensorium.is/">Sensorium Festival</a>, celebrating humane applications of creative technology in art, design and performance.
       </p>
       <p>
         Since 2016, I work in the R&D team of the Slovak National Gallery on web technology to connect people to art. 
-        Projects that I'm particularly proud of include the online collections platform <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://webumenia.sk/en">Web umenia</a>, a <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="http://senxskutocnost.sng.sk/en">long-form story about a controversial part of Slovak history</a> and a <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://fillafulla.sng.sk/?lang=en#">conversational interface that brings two iconic Czechoslovak painters back to life in chat bot form</a>.
-        You can find <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="https://github.com/SlovakNationalGallery/">all our work on GitHub</a>
+        Projects that I'm particularly proud of include the online collections platform <a class="link dark-green hover-green underline fw6" target="_blank" href="https://webumenia.sk/en">Web umenia</a>, a <a class="link dark-green hover-green underline fw6" target="_blank" href="http://senxskutocnost.sng.sk/en">long-form story</a> about a controversial part of Slovak history and a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://fillafulla.sng.sk/?lang=en#">conversational interface</a> that brings two iconic Czechoslovak painters back to life in chat bot form.
+        You can find all our work on <a class="link dark-green hover-green underline fw6" target="_blank" href="https://github.com/SlovakNationalGallery/">GitHub</a>
       </p>
       <p>
-        In 2013, I initiated an international series of <a class="link bg-white dark-green hover-dark-green fw7 hover-bg-washed-green" target="_blank" href="http://twitter.com/storyunite">storytelling hack jams</a> to bring together media makers, web developers and designers to prototype stories that can only be told on the web. We are a welcoming community of innovative storytellers, spread across many disciplines and time zones.
+        In 2013, I initiated an international series of <a class="link dark-green hover-green underline fw6" target="_blank" href="http://twitter.com/storyunite">storytelling hack jams</a> to bring together media makers, web developers and designers to prototype stories that can only be told on the web. We are a welcoming community of innovative storytellers, spread across many disciplines and time zones.
       </p>
     </div>
     <footer class="pv4 tl">
