--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
         In 2013, I initiated an international series of <a class="link dark-green hover-green underline fw6" target="_blank" href="http://twitter.com/storyunite">storytelling hack jams</a> to bring together media makers, web developers and designers to prototype stories that can only be told on the web. We are a welcoming community of innovative storytellers, spread across many disciplines and time zones.
       </p>
     </div>
-    <footer class="pv4 tl">
-      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
+    <footer class="pt5 tl">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
         <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
       </a>
-      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://github.com/phivk/" title="github">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://github.com/phivk/" title="github">
         <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
       </a>
-      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://medium.com/@phivk" title="medium">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://medium.com/@phivk" title="medium">
         <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
       </a>
-      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://slides.com/phivk/" title="slides">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://slides.com/phivk/" title="slides">
         <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
       </a>
-      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
         <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
       </a>
-      <a class="link dim dark-green dib br-100 h2 w4 mr3 " target="_blank" href="https://vimeo.com/phivk" title="vimeo">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://vimeo.com/phivk" title="vimeo">
         <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
       </a>
     </footer>
