update bio line

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Occasionally people call me a designer 🎩, technologist 🧢, educator 🎓 or community organiser ⛑. 
       </p>
       <p class="f3 measure">
-        I enjoy working with cultural organisations to help them tell stories in experiential ways, often making use of digitised collections.
+        I enjoy working with cultural organisations to create engaging visitor experiences, often making use of digital collections, storytelling and interaction design.
       </p>
       <p class="f4 measure">
         I have a background in Cognitive Science & Artificial Intelligence and have a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
