--- a/index.html
+++ b/index.html
@@ -7,39 +7,67 @@
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 <body class="sans-serif dark-gray bg-washed-green">
-
   <div class="pa3 pa4-m pa6-l pb4-l">
-    <div class="fw7 lh-title mt5">
-      <p>
-        <div class="f-headline">hi! 👋 </div>
-        <div class="f1">My name is Philo.</div>
-      </p> 
-      <p class="f2 measure">
-        Occasionally people call me a designer 🎩, technologist 🧢, educator 🎓 or community organiser ⛑. 
-      </p>
-      <p class="f3 measure">
-        I enjoy working with cultural organisations to create engaging visitor experiences, often making use of digital collections, storytelling and interaction design.
-      </p>
-      <p class="f4 measure">
-        I have a background in Cognitive Science & Artificial Intelligence and have a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
-      </p>
-    </div>
-    <div class="measure">
-      <p>
-        I co-founded the design studio <a class="link dark-green hover-green underline fw6" target="_blank" href="http://unfold.is/">Unfold Collective</a> to explore the potential for meaning making media on the intersection of digital and physical. We help cultural organisations and brands to tell stories in experiential ways.
-      </p>
-      <p>
-        I am co-founder and head curator of <a class="link dark-green hover-green underline fw6" target="_blank" href="https://sensorium.is/">Sensorium Festival</a>, celebrating humane applications of creative technology in art, design and performance.
-      </p>
-      <p>
-        Since 2016, I work in the R&D team of the Slovak National Gallery on web technology to connect people to art. 
-        Projects that I'm particularly proud of include the online collections platform <a class="link dark-green hover-green underline fw6" target="_blank" href="https://webumenia.sk/en">Web umenia</a>, a <a class="link dark-green hover-green underline fw6" target="_blank" href="http://senxskutocnost.sng.sk/en">long-form story</a> about a controversial part of Slovak history and a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://fillafulla.sng.sk/?lang=en#">conversational interface</a> that brings two iconic Czechoslovak painters back to life in chat bot form.
-        You can find all our work on <a class="link dark-green hover-green underline fw6" target="_blank" href="https://github.com/SlovakNationalGallery/">GitHub</a>
-      </p>
-      <p>
-        In 2013, I initiated an international series of <a class="link dark-green hover-green underline fw6" target="_blank" href="http://twitter.com/storyunite">storytelling hack jams</a> to bring together media makers, web developers and designers to prototype stories that can only be told on the web. We are a welcoming community of innovative storytellers, spread across many disciplines and time zones.
-      </p>
-    </div>
+    <header class="tl">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
+        <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://github.com/phivk/" title="github">
+        <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://medium.com/@phivk" title="medium">
+        <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://slides.com/phivk/" title="slides">
+        <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
+        <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://vimeo.com/phivk" title="vimeo">
+        <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
+        <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
+      </a>
+    </header>
+    <main>
+      <div class="fw7 lh-title mt5">
+        <p>
+          <div class="f-headline">hi! 👋 </div>
+          <div class="f1">My name is Philo.</div>
+        </p> 
+        <p class="f2 measure">
+          I create tools, stories and things in between to amplify human connection with arts and culture.
+        </p>
+        <p class="f3 measure">
+          I enjoy working with cultural organisations to create engaging visitor experiences, often making use of digital collections, storytelling, AI and interaction design.
+        </p>
+        <p class="f4 measure">
+          My background is in Cognitive Science & Artificial Intelligence and I have a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
+        </p>
+      </div>
+      <div class="measure">
+        <p>
+          At the <a class="link dark-green hover-green underline fw6" target="_blank" href="https://beeldengeluid.nl/en/">Netherlands Institute for Sound and Vision</a> I work on <strong>innovative user interfaces for audiovisual collections</strong>. In the scope of the MediaScape project, I currently investigate the efficacy of ‘generous interfaces’ in the AV archiving field. In the project I combines interaction design with data visualisation to develop a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://mediascape.now.sh/">series of interface concepts</a> that reveal the scale and complexity of AV collections.
+        </p>
+        <p>
+          I run <a class="link dark-green hover-green underline fw6" target="_blank" href="https://twitter.com/storyunite">Storytellers United</a>, a <strong>welcoming community of innovative storytellers</strong>, spread across many disciplines and time zones. We organise an international series of storytelling hack jams to bring together media makers, web developers and designers to prototype stories that can only be told on the web. 
+          <br>
+          <strong>You should <a class="link dark-green hover-green underline fw6" target="_blank" href="http://storytellers.link">join us on Slack</a></strong>.
+        </p>
+        <p>
+          I co-founded the design studio <a class="link dark-green hover-green underline fw6" target="_blank" href="http://unfold.is/">Unfold Collective</a> to explore the potential for <strong>sense making on the intersection of digital and physical media</strong>. We helped cultural organisations and brands to tell stories in experiential ways.
+        </p>
+        <p>
+          I co-founded <a class="link dark-green hover-green underline fw6" target="_blank" href="https://sensorium.is/">Sensorium Festival</a>, celebrating <strong>humane applications of creative technology</strong> in art, design and performance.
+        </p>
+        <p>
+          Between 2016 and 2019 I worked at the R&D team of the Slovak National Gallery on <strong>web technology to connect people to art</strong>. Projects that I'm particularly proud of include the online collections platform <a class="link dark-green hover-green underline fw6" target="_blank" href="https://webumenia.sk/en">Web umenia</a>, a <a class="link dark-green hover-green underline fw6" target="_blank" href="http://senxskutocnost.sng.sk/en">long-form story</a> about a controversial part of Slovak history and a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://fillafulla.sng.sk/?lang=en#">conversational interface</a> that brings two iconic Czechoslovak painters back to life in chat bot form.
+          You can find all our work on <a class="link dark-green hover-green underline fw6" target="_blank" href="https://github.com/SlovakNationalGallery/">GitHub</a>
+        </p>
+      </div>
+    </main>
     <footer class="pt5 tl">
       <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
         <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
@@ -58,6 +86,9 @@
       </a>
       <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://vimeo.com/phivk" title="vimeo">
         <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
+      </a>
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
+        <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
       </a>
     </footer>
   </div>
