--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body class="sans-serif dark-gray bg-washed-green">
   <div class="pa3 pa4-m pa6-l pb4-l">
     <header class="tl">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="./" title="home">
+        <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
+      </a>
       <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
         <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
       </a>
@@ -69,6 +72,9 @@
       </div>
     </main>
     <footer class="pt5 tl">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="./" title="home">
+        <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
+      </a>
       <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
         <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
       </a>
