--- a/info/index.html
+++ b/info/index.html
@@ -9,7 +9,7 @@
 <body class="sans-serif dark-gray bg-washed-green">
   <div class="pa3 pa4-m pa6-l pb4-l">
     <header class="tl">
-      <a class="link dim dark-green dib br-100 h3 w4 mr3" href="./" title="home">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3" href="../" title="home">
         <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
       </a>
       <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
@@ -42,13 +42,13 @@
           Philo van Kemenade creates tools, stories and things in between to amplify human connection with arts and culture. At the Netherlands Institute for Sound and Vision he works on innovative user interfaces for audiovisual collections. Philo co-founded the digital arts & culture festival Sensorium and is initiator of the Storytellers United network. He has a keen interest in lifelong learning and regularly leads workshops about creative coding, fundamentals of programming, web scraping, 3D scanning and storytelling innovation.
         </p>
         <h2>photos</h2>
-          <img class="w5" src="./img/philo_van_kemenade.jpg" alt="Headshot Philo van Kemenade">
-          <img class="w5" src="./img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade">
-          <img class="w5" src="./img/philo_van_kemenade-hackathon.jpg" alt="Philo van Kemenade at SNG Hackathon">
+          <img class="w5" src="../img/philo_van_kemenade.jpg" alt="Headshot Philo van Kemenade">
+          <img class="w5" src="../img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade">
+          <img class="w5" src="../img/philo_van_kemenade-hackathon.jpg" alt="Philo van Kemenade at SNG Hackathon">
       </div>
     </main>
     <footer class="pt5 tl">
-      <a class="link dim dark-green dib br-100 h3 w4 mr3" href="./" title="home">
+      <a class="link dim dark-green dib br-100 h3 w4 mr3" href="../" title="home">
         <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
       </a>
       <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
