keep info images in info folder

--- a/info/index.html
+++ b/info/index.html
@@ -42,9 +42,9 @@
           Philo van Kemenade creates tools, stories and things in between to amplify human connection with arts and culture. At the Netherlands Institute for Sound and Vision he works on innovative user interfaces for audiovisual collections. Philo co-founded the digital arts & culture festival Sensorium and is initiator of the Storytellers United network. He has a keen interest in lifelong learning and regularly leads workshops about creative coding, fundamentals of programming, web scraping, 3D scanning and storytelling innovation.
         </p>
         <h2>photos</h2>
-          <img class="w5" src="../img/philo_van_kemenade.jpg" alt="Headshot Philo van Kemenade">
-          <img class="w5" src="../img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade">
-          <img class="w5" src="../img/philo_van_kemenade-hackathon.jpg" alt="Philo van Kemenade at SNG Hackathon">
+          <img class="w5" src="./img/philo_van_kemenade.jpg" alt="Headshot Philo van Kemenade">
+          <img class="w5" src="./img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade">
+          <img class="w5" src="./img/philo_van_kemenade-hackathon.jpg" alt="Philo van Kemenade at SNG Hackathon">
       </div>
     </main>
     <footer class="pt5 tl">
