fix unfold link and add period

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
           <strong>You should <a class="link dark-green hover-green underline fw6" target="_blank" href="http://storytellers.link">join us on Slack</a></strong>.
         </p>
         <p>
-          I co-founded the design studio <a class="link dark-green hover-green underline fw6" target="_blank" href="http://unfold.is/">Unfold Collective</a> to explore the potential for <strong>sense making on the intersection of digital and physical media</strong>. We helped cultural organisations and brands to tell stories in experiential ways.
+          I co-founded the design studio <a class="link dark-green hover-green underline fw6" target="_blank" href="https://www.behance.net/unfoldcollective">Unfold Collective</a> to explore the potential for <strong>sense making on the intersection of digital and physical media</strong>. We helped cultural organisations and brands to tell stories in experiential ways.
         </p>
         <p>
           I co-founded <a class="link dark-green hover-green underline fw6" target="_blank" href="https://sensorium.is/">Sensorium Festival</a>, celebrating <strong>humane applications of creative technology</strong> in art, design and performance.
         </p>
         <p>
           Between 2016 and 2019 I worked at the R&D team of the Slovak National Gallery on <strong>web technology to connect people to art</strong>. Projects that I'm particularly proud of include the online collections platform <a class="link dark-green hover-green underline fw6" target="_blank" href="https://webumenia.sk/en">Web umenia</a>, a <a class="link dark-green hover-green underline fw6" target="_blank" href="http://senxskutocnost.sng.sk/en">long-form story</a> about a controversial part of Slovak history and a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://fillafulla.sng.sk/?lang=en#">conversational interface</a> that brings two iconic Czechoslovak painters back to life in chat bot form.
-          You can find all our work on <a class="link dark-green hover-green underline fw6" target="_blank" href="https://github.com/SlovakNationalGallery/">GitHub</a>
+          You can find all our work on <a class="link dark-green hover-green underline fw6" target="_blank" href="https://github.com/SlovakNationalGallery/">GitHub</a>.
         </p>
       </div>
     </main>
