--- a/info/index.html
+++ b/info/index.html
@@ -43,7 +43,7 @@
         </p>
         <h2>photos</h2>
           <img class="w5" src="./img/philo_van_kemenade.jpg" alt="Headshot Philo van Kemenade">
-          <img class="w5" src="./img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade">
+          <img class="w5" src="./img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade in black and white">
           <img class="w5" src="./img/philo_van_kemenade-hackathon.jpg" alt="Philo van Kemenade at SNG Hackathon">
       </div>
     </main>
