--- a/info/index.html
+++ b/info/index.html
@@ -35,13 +35,13 @@
       </a>
     </header>
     <main>
-      <h1>info pack</h1>
+      <h1>bio pack</h1>
       <div>
-        <h2>bio</h2>
+        <h2>blurb</h2>
         <p class="measure">
-          Philo van Kemenade creates tools, stories and things in between to amplify human connection with arts and culture. At the Netherlands Institute for Sound and Vision he works on innovative user interfaces for audiovisual collections. Philo co-founded the digital arts & culture festival Sensorium and is initiator of the Storytellers United network. He has a keen interest in lifelong learning and regularly leads workshops about creative coding, fundamentals of programming, web scraping, 3D scanning and storytelling innovation.
+          Philo van Kemenade creates tools, stories and things in between to amplify human connection with arts and culture. He works on innovative user interfaces for audiovisual collections at the Netherlands Institute for Sound and Vision. Philo co-founded the digital arts & culture festival Sensorium and is initiator of the Storytellers United network. He has a keen interest in learning and human-centered futures of education.
         </p>
-        <h2>photos</h2>
+        <h2>pics</h2>
           <img class="w5" src="./img/philo_van_kemenade.jpg" alt="Headshot Philo van Kemenade">
           <img class="w5" src="./img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade in black and white">
           <img class="w5" src="./img/philo_van_kemenade-hackathon.jpg" alt="Philo van Kemenade at SNG Hackathon">
