tweak cog sci paragraph

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           I enjoy working with cultural organisations to create engaging visitor experiences, often making use of digital collections, storytelling, AI and interaction design.
         </p>
         <p class="f4 measure">
-          My background is in Cognitive Science & Artificial Intelligence and I have a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
+          My background in Cognitive Science & Artificial Intelligence gas given me a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
         </p>
       </div>
       <div class="measure">
