improve text color

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
       </a>
     </header>
-    <main>
+    <main class="dark-gray">
       <div class="fw7 lh-title mt5">
         <p>
           <div class="f-headline">hi! 👋 </div>
