--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           My background in Cognitive Science & Artificial Intelligence gas given me a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
         </p>
       </div>
+      <p><a class="link dark-green hover-green underline i" href="./now">What I am doing /now</a>.</p>
       <div class="measure">
         <p>
           At the <a class="link dark-green hover-green underline fw6" target="_blank" href="https://beeldengeluid.nl/en/">Netherlands Institute for Sound and Vision</a> I work on <strong>innovative user interfaces for audiovisual collections</strong>. In the scope of the MediaScape project, I currently investigate the efficacy of ‘generous interfaces’ in the AV archiving field. In the project I combines interaction design with data visualisation to develop a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://mediascape.now.sh/">series of interface concepts</a> that reveal the scale and complexity of AV collections.
