--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
   <script>
     feather.replace()
   </script>
+  <script data-goatcounter="https://phivk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
