--- a/now/index.html
+++ b/now/index.html
@@ -88,5 +88,6 @@
   <script>
     feather.replace()
   </script>
+  <script data-goatcounter="https://phivk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
