lay out email charter as two columns and add ids

--- a/emailcharter/index.html
+++ b/emailcharter/index.html
@@ -36,38 +36,43 @@
     </header>
     <main class="dark-gray">
       <h1>10 Rules to Reverse the Email Spiral</h1>
-
       <p class="i o-70">NB: this text has been salvaged from the now defunct emailcharter.org <a href="http://web.archive.org/web/20120503005113/http://emailcharter.org/" class="link dark-green hover-green underline" target="_blank">using the Wayback Machine</a>.</p>
-
-      <h2>1. Respect Recipients' Time</h2>
-      <p>This is the fundamental rule. As the message sender, the onus is on YOU to minimize the time your email will take to process. Even if it means taking more time at your end before sending.</p>
-
-      <h2>2. Short or Slow is not Rude</h2>
-      <p>Let's mutually agree to cut each other some slack. Given the email load we're all facing, it's OK if replies take a while coming and if they don't give detailed responses to all your questions. No one wants to come over as brusque, so please don't take it personally. We just want our lives back!</p>
-
-      <h2>3. Celebrate Clarity</h2>
-      <p>Start with a subject line that clearly labels the topic, and maybe includes a status category [Info], [Action], [Time Sens] [Low Priority]. Use crisp, muddle-free sentences. If the email has to be longer than five sentences, make sure the first provides the basic reason for writing. Avoid strange fonts and colors.</p>
-
-      <h2>4. Quash Open-Ended Questions</h2>
-      <p>It is asking a lot to send someone an email with four long paragraphs of turgid text followed by "Thoughts?". Even well-intended-but-open questions like "How can I help?" may not be that helpful. Email generosity requires simplifying, easy-to-answer questions. "Can I help best by a) calling b) visiting or c) staying right out of it?!"</p>
-
-      <h2>5. Slash Surplus cc's</h2>
-      <p>cc's are like mating bunnies. For every recipient you add, you are dramatically multiplying total response time. Not to be done lightly! When there are multiple recipients, please don't default to 'Reply All'. Maybe you only need to cc a couple of people on the original thread. Or none.</p>
       
-      <h2>6. Tighten the Thread</h2>
-      <p>Some emails depend for their meaning on context. Which means it's usually right to include the thread being responded to. But it's rare that a thread should extend to more than 3 emails. Before sending, cut what's not relevant. Or consider making a phone call instead.</p>
+      <div class="flex flex-wrap flex-nowrap-ns">
+        <div class="measure mr4-ns">
+          <h2>1. Respect Recipients' Time</h2>
+          <p>This is the fundamental rule. As the message sender, the onus is on YOU to minimize the time your email will take to process. Even if it means taking more time at your end before sending.</p>
 
-      <h2>7. Attack Attachments</h2>
-      <p>Don't use graphics files as logos or signatures that appear as attachments. Time is wasted trying to see if there's something to open. Even worse is sending text as an attachment when it could have been included in the body of the email.</p>
+          <h2>2. Short or Slow is not Rude</h2>
+          <p>Let's mutually agree to cut each other some slack. Given the email load we're all facing, it's OK if replies take a while coming and if they don't give detailed responses to all your questions. No one wants to come over as brusque, so please don't take it personally. We just want our lives back!</p>
 
-      <h2>8. Give these Gifts: EOM NNTR</h2>
-      <p>If your email message can be expressed in half a dozen words, just put it in the subject line, followed by EOM (= End of Message). This saves the recipient having to actually open the message. Ending a note with "No need to respond" or NNTR, is a wonderful act of generosity. Many acronyms confuse as much as help, but these two are golden and deserve wide adoption.</p>
+          <h2>3. Celebrate Clarity</h2>
+          <p>Start with a subject line that clearly labels the topic, and maybe includes a status category [Info], [Action], [Time Sens] [Low Priority]. Use crisp, muddle-free sentences. If the email has to be longer than five sentences, make sure the first provides the basic reason for writing. Avoid strange fonts and colors.</p>
 
-      <h2>9. Cut Contentless Responses</h2>
-      <p>You don't need to reply to every email, especially not those that are themselves clear responses. An email saying "Thanks for your note. I'm in." does not need you to reply "Great." That just cost someone another 30 seconds.</p>
+          <h2>4. Quash Open-Ended Questions</h2>
+          <p>It is asking a lot to send someone an email with four long paragraphs of turgid text followed by "Thoughts?". Even well-intended-but-open questions like "How can I help?" may not be that helpful. Email generosity requires simplifying, easy-to-answer questions. "Can I help best by a) calling b) visiting or c) staying right out of it?!"</p>
 
-      <h2>10. Disconnect!</h2>
-      <p>If we all agreed to spend less time doing email, we'd all get less email! Consider calendaring half-days at work where you can't go online. Or a commitment to email-free weekends. Or an 'auto-response' that references this charter. And don't forget to smell the roses. </p>
+          <h2>5. Slash Surplus cc's</h2>
+          <p>cc's are like mating bunnies. For every recipient you add, you are dramatically multiplying total response time. Not to be done lightly! When there are multiple recipients, please don't default to 'Reply All'. Maybe you only need to cc a couple of people on the original thread. Or none.</p>
+        </div>
+        <div class="measure mr4-ns">
+          
+          <h2>6. Tighten the Thread</h2>
+          <p>Some emails depend for their meaning on context. Which means it's usually right to include the thread being responded to. But it's rare that a thread should extend to more than 3 emails. Before sending, cut what's not relevant. Or consider making a phone call instead.</p>
+
+          <h2>7. Attack Attachments</h2>
+          <p>Don't use graphics files as logos or signatures that appear as attachments. Time is wasted trying to see if there's something to open. Even worse is sending text as an attachment when it could have been included in the body of the email.</p>
+
+          <h2>8. Give these Gifts: EOM NNTR</h2>
+          <p>If your email message can be expressed in half a dozen words, just put it in the subject line, followed by EOM (= End of Message). This saves the recipient having to actually open the message. Ending a note with "No need to respond" or NNTR, is a wonderful act of generosity. Many acronyms confuse as much as help, but these two are golden and deserve wide adoption.</p>
+
+          <h2>9. Cut Contentless Responses</h2>
+          <p>You don't need to reply to every email, especially not those that are themselves clear responses. An email saying "Thanks for your note. I'm in." does not need you to reply "Great." That just cost someone another 30 seconds.</p>
+
+          <h2>10. Disconnect!</h2>
+          <p>If we all agreed to spend less time doing email, we'd all get less email! Consider calendaring half-days at work where you can't go online. Or a commitment to email-free weekends. Or an 'auto-response' that references this charter. And don't forget to smell the roses. </p>
+        </div>
+      </div>
     </main>
     <footer class="pt5 tl">
       <a class="link dim dark-green dib br-100 h3 w4 mr3" href="../" title="home">
