add links to about and contributors

--- a/emailcharter/index.html
+++ b/emailcharter/index.html
@@ -36,8 +36,8 @@
     </header>
     <main class="dark-gray">
       <h1>10 Rules to Reverse the Email Spiral</h1>
-      <p class="i o-70">NB: this text has been salvaged from the now defunct emailcharter.org <a href="http://web.archive.org/web/20120503005113/http://emailcharter.org/" class="link dark-green hover-green underline" target="_blank">using the Wayback Machine</a>.</p>
-      
+      <p class="i o-70 measure-wide">This text has been salvaged from the now defunct emailcharter.org <a href="http://web.archive.org/web/20120503005113/http://emailcharter.org/" class="link dark-green hover-green underline" target="_blank">using the Wayback Machine</a>. You can read more <a href="http://web.archive.org/web/20120505081653/http://emailcharter.org/about.html" class="link dark-green hover-green underline" target="_blank">about the original email charter</a> and <a href="http://web.archive.org/web/20120505081230/http://emailcharter.org/comments.html" class="link dark-green hover-green underline" target="_blank">its contributors</a>.</p>
+
       <div class="flex flex-wrap flex-nowrap-ns">
         <div class="measure mr4-ns">
           <h2 id="1-respect-recipients'-time">1. Respect Recipients' Time</h2>
