improve home h1, header, footer

--- a/emailcharter/index.html
+++ b/emailcharter/index.html
@@ -8,31 +8,15 @@
 </head>
 <body class="sans-serif dark-gray bg-washed-green">
   <div class="pa3 pa4-m pa6-l pb4-l">
-    <header class="tl">
-      <a class="link dim dark-green dib br-100 h3 w4 mr3" href="../" title="home">
-        <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
-        <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://github.com/phivk/" title="github">
-        <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://medium.com/@phivk" title="medium">
-        <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://slides.com/phivk/" title="slides">
-        <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
-        <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://vimeo.com/phivk" title="vimeo">
-        <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
-        <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
-      </a>
+    <header class="f7">
+      <nav class="f6">
+        <a class="link dim dark-green dib mr3 mb3" href="./" title="home">
+          <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
+        </a>
+        <a class="link dim dark-green dib mr3 mb3" href="./now" title="home">
+          <i class="v-mid" data-feather="sun"></i> <span class="v-mid">now</span>
+        </a>
+      </nav>
     </header>
     <main class="dark-gray">
       <h1>10 Rules to Reverse the Email Spiral</h1>
@@ -74,29 +58,26 @@
         </div>
       </div>
     </main>
-    <footer class="pt5 tl">
-      <a class="link dim dark-green dib br-100 h3 w4 mr3" href="../" title="home">
-        <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
-      </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://twitter.com/phivk" title="twitter">
+    <footer class="pt5 f7">
+      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://twitter.com/phivk" title="twitter">
         <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
       </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://github.com/phivk/" title="github">
+      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://github.com/phivk/" title="github">
         <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
       </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://medium.com/@phivk" title="medium">
+      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://medium.com/@phivk" title="medium">
         <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
       </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://slides.com/phivk/" title="slides">
+      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://slides.com/phivk/" title="slides">
         <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
       </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
+      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
         <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
       </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://vimeo.com/phivk" title="vimeo">
+      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://vimeo.com/phivk" title="vimeo">
         <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
       </a>
-      <a class="link dim dark-green dib br-100 h3 w4 mr3 " target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
+      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
         <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
       </a>
     </footer>
