--- a/now/index.html
+++ b/now/index.html
@@ -19,14 +19,14 @@
       </nav>
     </header>
     <main class="dark-gray">
-      <h1>What I'm doing now</h1>
-      <p class="i">This page is inspired by an idea by <a class="link dark-green hover-green underline" href="https://sive.rs/now" target="_blank">Derek Sivers</a>. See <a class="link dark-green hover-green underline" href="https://nownownow.com/about">nownownow.com/about</a> for more info.</p>
+      <h1 class="f1">What I'm doing now</h1>
       <div class="measure-wide">
-        <ul class="list pa0 f4">
+        <ul class="list pa0 mb5">
           <li class="mb3">Researching and developing <a class="link dark-green hover-green underline" href="https://www.beeldengeluid.nl/en/news/learn-all-about-generous-interfaces" target="_blank">innovative interfaces for audiovisual collections</a> at the Netherlands Institute for Sound & Vision.</li>
           <li class="mb3">Growing <a class="link dark-green hover-green underline" href="https://storytellers.link/" target="_blank">a friendly community of innovative storytellers with diversity at its core</a>.</li>
           <li class="mb3">Building <a class="link dark-green hover-green underline" href="https://gradu.al/" target="_blank">tools for intentional community learning</a>.</li>
-          <li class="mb3">Developing a course on photogrammetric 3D scanning, guided by the storyworld of <a class="link dark-green hover-green underline" href="https://en.wikipedia.org/wiki/Flatland" target="_blank">Flatland</a> by Edwin Abbott Abbott, as part of <a class="link dark-green hover-green underline" href="https://hyperlink.academy/" target="_blank">Hyperlink Academy</a>'s Meta Course.</li>
+          <li class="mb3">Developing a course on photogrammetric 3D scanning, inspired by the storyworld of <a class="link dark-green hover-green underline" href="https://en.wikipedia.org/wiki/Flatland" target="_blank">Flatland</a> by Edwin Abbott Abbott, as part of <a class="link dark-green hover-green underline" href="https://hyperlink.academy/" target="_blank">Hyperlink Academy</a>'s Meta Course.</li>
+          <li class="mb3">Co-curating the <a href="https://www.mozillafestival.org/en/uniquely-mozfest/spaces/#creative-ai" target="_blank" class="link dark-green hover-green underline">Creative AI Space at the 2021 edition of Mozilla Festival</a>.</li>
           <li class="mb3">
             Learning / practicing
             <ul>
@@ -37,8 +37,8 @@
             </ul>
           </li>
         </ul>
-
-        <p class="mt4 o-70">This page was last updated: November 2020</p>
+        <p class="o-70 i">This page was last updated: December 2020.</p>
+        <p class="o-70 i">This page is inspired by an idea by <a class="link dark-green hover-green underline" href="https://sive.rs/now" target="_blank">Derek Sivers</a>. See <a class="link dark-green hover-green underline" href="https://nownownow.com/about">nownownow.com/about</a> for more info.</p>
       </div>
     </main>
     <footer class="pt5 f7">
