fix type and tweak sentence

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           I enjoy working with cultural organisations to create engaging visitor experiences, often making use of digital collections, storytelling, AI and interaction design.
         </p>
         <p class="f4 measure">
-          My background in Cognitive Science & Artificial Intelligence gas given me a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
+          From my background in Cognitive Science & Artificial Intelligence I have a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
         </p>
       </div>
       <p><a class="link dark-green hover-green underline i" href="./now">What I am doing /now</a>.</p>
