--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Philo van Kemenade</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  <script src="/js/feather.min.js"></script>
 </head>
 <body class="sans-serif dark-gray bg-washed-green">
   <div class="pa3 pa4-m pa6-l pb4-l">
