add to index and add verification rel attr

--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
         <a
           class="link dim dark-green dib mr3 mb3"
           target="_blank"
+          href="https://c.im/@Phivk"
+          title="mastodon"
+          rel="me"
+        >
+          <i class="v-mid" data-feather="at-sign"></i>
+          <span class="v-mid">mastodon</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
           href="https://github.com/phivk/"
           title="github"
         >
