--- a/emailcharter/index.html
+++ b/emailcharter/index.html
@@ -166,6 +166,7 @@
           target="_blank"
           href="https://c.im/@Phivk"
           title="mastodon"
+          rel="me"
         >
           <i class="v-mid" data-feather="at-sign"></i>
           <span class="v-mid">mastodon</span>
