--- a/now/index.html
+++ b/now/index.html
@@ -134,6 +134,7 @@
           target="_blank"
           href="https://c.im/@Phivk"
           title="mastodon"
+          rel="me"
         >
           <i class="v-mid" data-feather="at-sign"></i>
           <span class="v-mid">mastodon</span>
